<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.fragments.imagezoom.ImageZoomFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <org.pesmypetcare.mypetcare.activities.views.circularentry.CircularImageView
            android:id="@+id/displayedImage"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom|end">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/flModifyImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="16dp"
                app:backgroundTint="@color/colorPrimary"
                app:tint="@color/white"
                app:fabSize="auto"
                android:src="@drawable/icon_modify"
                style="@style/Widget.MaterialComponents.FloatingActionButton" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/flDeleteImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="16dp"
                app:backgroundTint="@color/red"
                app:tint="@color/white"
                app:fabSize="auto"
                android:src="@drawable/icon_delete"
                style="@style/Widget.MaterialComponents.FloatingActionButton" />

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</FrameLayout>
