...
    <string name="navigation_my_pets">My Pets</string>
    <string name="navigation_pets_community">Pet\'s community</string>
    <string name="navigation_my_walks">My walks</string>
    <string name="navigation_near_establishments">Near establishments</string>
    <string name="navigation_calendar">Calendar</string>
    <string name="navigation_achievements">Achievements</string>
    <string name="navigation_settings">Settings</string>
    <string name="defaultName">John Doe</string>
    <string name="defaultEmail">johndoe@gmail.com</string>
    <string name="breed_title">Breed</string>
    <string name="birth_date_title">Age(years)</string>
    <string name="gender_title">Gender</string>
    <string name="birth_title">Birth</string>
...
    <string name="medal_planner_description">Write everything on the calendar!</string>
    <string name="google_account_not_detected">
        You need to sign in with Google \nto sync with Google Calendar
    </string>

    <!-- The next two strings cannot be translated into any other language -->
    <string name="navigation_view_open" translatable="false">Open</string>
    <string name="navigation_view_closed" translatable="false">Closed</string>

</resources>

