<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.fragments.infopet.InfoPetBasicFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
            app:layout_constraintStart_toEndOf="@+id/linearLayout2"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/breed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/breed_title"
                    app:boxBackgroundColor="@color/white"
                    app:boxStrokeColor="@color/colorAccent"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true"
                    app:startIconContentDescription="@string/breed_title">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtBreed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/breed_random"
                        android:textColor="@color/colorPrimary" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/gender"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/gender_title"
                    app:boxBackgroundColor="@color/white"
                    app:endIconMode="dropdown_menu">

                    <AutoCompleteTextView
                        android:id="@+id/inputGender"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:ems="10"
                        android:inputType="text"
                        android:maxLines="1"
                        android:paddingStart="12dp"
                        android:paddingTop="20dp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"
                        tools:ignore="RtlSymmetry" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/pathologies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/patologies_title"
                    app:boxBackgroundColor="@color/white"
                    app:helperTextEnabled="true"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true"
                    app:startIconContentDescription="@string/breed_title">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtPathologies"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/patologies_random"
                        android:textColor="@color/colorPrimary" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/inputBirthMonth"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="40dp"
                    android:layout_weight="0.4"
                    android:backgroundTint="@color/white"
                    android:hint="@string/birth_random"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    app:icon="@drawable/baseline_cake_black_18dp"
                    app:iconTint="@color/colorPrimary"
                    app:strokeColor="@color/colorAccent"
                    app:strokeWidth="2dp" />

            </LinearLayout>


        </ScrollView>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/updatePet"
                style="@style/rounded_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/colorPrimary"
                android:paddingStart="40dp"
                android:text="@string/update_pet"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:ignore="RtlSymmetry" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/deleteButton"
                style="@style/rounded_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:layout_weight="0.4"
                android:backgroundTint="@color/red"
                android:text="@string/delete_pet"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:icon="@drawable/baseline_delete_black_18dp"
                app:iconTint="@color/white" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>
