...
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="7dp"
                android:src="@drawable/c4907577a372c21c3ea70cad4b59eb07" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/petName"
                style="@style/TextAppearance.MaterialComponents.Headline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:startIconContentDescription="Pet Name"
                android:layout_marginStart="30dp"
...
