<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.fragments.settings.NewPasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <!--<EditText
            android:id="@+id/oldPasswordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Old Password"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />-->

        <EditText
            android:id="@+id/newPasswordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="New Password"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/confirmNewPasswordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Confirm New Password"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/confirm_new_password"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/apply_change"
            android:textColor="@color/white"
            style="@style/rounded_button"/>

    </LinearLayout>
</FrameLayout>
